--- a/basicViewApp/app/src/main/res/values/colors.xml
+++ b/basicViewApp/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <!--<color name="screenBackground">#DB94F4</color>-->
     <color name="buttonBackground">#BBDEFB</color>
+    <color name="screenBackground2">#26C6DA</color>
 </resources>
